Jacobi method description added

--- a/MethodsOfSolvingEquations.ipynb
+++ b/MethodsOfSolvingEquations.ipynb
@@ -56,7 +56,14 @@
     "### Short description ###\n",
     "The Jacobi method is an iterative algorithm used to solve a system of linear equations. It is particularly useful for large systems where direct methods (like Gaussian elimination) may be computationally expensive. The method works by decomposing the matrix into its diagonal, lower triangular, and upper triangular components, and then iteratively refining the solution vector until convergence.\n",
     "\n",
-    "### x(n+1)=Mx(n)+Nb"
+    "### x(n+1)=Mx(n)+Nb\n",
+    "\n",
+    "where:\n",
+    "- **x(n+1)** is the new approximation of the solution vector.\n",
+    "- **M** is a matrix derived from the original matrix A, which combines the lower and upper triangular parts.\n",
+    "- **N** is the inverse of the diagonal matrix of A.\n",
+    "- **b** is the constant vector from the system of equations.\n",
+    "- **x(n)** is the current approximation of the solution vector."
    ],
    "id": "cc28db1d225ec628"
   },
