--- a/MethodsOfSolvingEquations.ipynb
+++ b/MethodsOfSolvingEquations.ipynb
@@ -546,9 +546,7 @@
     "        x = x_new\n",
     "\n",
     "    print(\"Warning: Method did not converge within the maximum number of iterations.\")\n",
-    "    return x\n",
-    "\n",
-    "\n"
+    "    return x"
    ],
    "id": "84ebaa6f490fa2d3",
    "outputs": [],
@@ -892,10 +890,8 @@
     "        A3 = np.eye(n)\n",
     "        if n > 1:\n",
     "            A3[0, 1] = 0.9999  \n",
-    "        \n",
-    "        # Usuwamy A4 (losową)\n",
-    "        \n",
-    "        matrices.append((A1, A2, A3))  # Tylko trzy macierze\n",
+    "                \n",
+    "        matrices.append((A1, A2, A3))  #\n",
     "        \n",
     "    return matrices\n",
     "\n",
@@ -987,7 +983,6 @@
     "        \"Silnie diag. dominująca\",\n",
     "        \"Słabo diag. dominująca\",\n",
     "        \"Bliska osobliwości\"\n",
-    "        # Usunięta \"Losowa\"\n",
     "    ]\n",
     "    \n",
     "    fig, axs = plt.subplots(4, 3, figsize=(15, 16)) \n",
