--- a/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
+++ b/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
@@ -291,8 +291,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-31T19:35:19.234599Z",
-     "start_time": "2025-05-31T19:35:19.226033Z"
+     "end_time": "2025-05-31T21:44:38.519591Z",
+     "start_time": "2025-05-31T21:44:38.514265Z"
     }
    },
    "cell_type": "code",
@@ -337,14 +337,14 @@
     "    return lambda_new\n",
     "\n",
     "\n",
-    "def condition_number_power_method(A):\n",
-    "    lambda_max = power_method(A)\n",
-    "    lambda_min = inverse_power_method(A)\n",
+    "def condition_number_power_method(A, max_iter=1000):\n",
+    "    lambda_max = power_method(A ,max_iter)\n",
+    "    lambda_min = inverse_power_method(A ,max_iter)\n",
     "    return abs(lambda_max / lambda_min)\n"
    ],
    "id": "55bbb4534f2991db",
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 160
   },
   {
    "metadata": {},
@@ -397,23 +397,30 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Porównanie wyników różnych metod obliczania współczynnika uwarunkowania macierzy #",
+   "source": "# Porównanie wyników różnych metod obliczania współczynnika uwarunkowania macierzy dla macierzy C z podręcznika#",
    "id": "919d3816305a8f97"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-31T19:35:19.303198Z",
-     "start_time": "2025-05-31T19:35:19.269673Z"
+     "end_time": "2025-05-31T21:44:41.724660Z",
+     "start_time": "2025-05-31T21:44:41.695297Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(condition_number_power_method(A))\n",
-    "print(condition_number_svd(A))\n",
-    "print(condition_number_power_method(A))\n",
-    "print(condition_number_qr(A))\n",
-    "print(np.linalg.cond(A))\n",
+    "C = np.array([\n",
+    "    [4, 2, -5, 2],\n",
+    "    [1, 5, 3, 9],\n",
+    "    [2, 2, 5, -7],\n",
+    "    [1, 4, -1, 1]\n",
+    "], dtype=float)\n",
+    "\n",
+    "print(condition_number_norm(C))\n",
+    "print(condition_number_svd(C))\n",
+    "print(condition_number_power_method(C, max_iter=100000000))\n",
+    "print(condition_number_qr(C))\n",
+    "print(np.linalg.cond(C))\n",
     "      "
    ],
    "id": "6fd6dee29eaab89d",
@@ -422,15 +429,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.595389920799605\n",
+      "6.431698388238536\n",
+      "6.431698388238534\n",
+      "2.234745948069669\n",
+      "6.431698388238545\n",
+      "6.431698388238537\n"
+     ]
+    }
+   ],
+   "execution_count": 161
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Sprawdzenie czy macierz była diagnonalizowalna ###",
+   "id": "888cd3b6b4c93279"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from numpy.linalg import matrix_rank\n",
+    "\n",
+    "def is_diagonalizable(A, tol=1e-10):\n",
+    "\n",
+    "    n = A.shape[0]\n",
+    "    if A.shape[0] != A.shape[1]:\n",
+    "        raise ValueError(\"Macierz musi być kwadratowa\")\n",
+    "\n",
+    "    eigenvalues, _ = np.linalg.eig(A)\n",
+    "    unique_eigenvalues = np.unique(np.round(eigenvalues, decimals=10))  # zaokrąglamy, aby grupować\n",
+    "\n",
+    "    total_geometric_multiplicity = 0\n",
+    "\n",
+    "    for val in unique_eigenvalues:\n",
+    "        algebraic_multiplicity = np.sum(np.abs(eigenvalues - val) < tol)\n",
+    "\n",
+    "        matrix_nullity = n - matrix_rank(A - val*np.eye(n))\n",
+    "\n",
+    "        total_geometric_multiplicity += matrix_nullity\n",
+    "\n",
+    "        if matrix_nullity < algebraic_multiplicity:\n",
+    "            return False\n",
+    "\n",
+    "    return total_geometric_multiplicity == n"
+   ],
+   "id": "a08600900bc88f71"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T21:52:08.825189Z",
+     "start_time": "2025-05-31T21:52:08.819559Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(\"Czy macierz C jest diagonalizowalna? \", is_diagonalizable(C))",
+   "id": "60190128131ce7ab",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Czy macierz C jest diagonalizowalna?  False\n"
+     ]
+    }
+   ],
+   "execution_count": 165
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Dlatego, że macierz C nie jest diagonalizowalna, to nie możemy użyć metody potęgowej do obliczenia współczynnika uwarunkowania. Metoda ta wymaga, aby macierz była diagonalizowalna, ponieważ opiera się na obliczaniu wartości własnych macierzy. Dlatego wynik tak bardzo odstaje od reszty metod.",
+   "id": "fbadfe7fcf1573e5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T21:42:46.270193Z",
+     "start_time": "2025-05-31T21:42:46.239459Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(condition_number_norm(A))\n",
+    "print(condition_number_svd(A))\n",
+    "print(condition_number_power_method(A))\n",
+    "print(condition_number_qr(A))\n",
+    "print(np.linalg.cond(A))"
+   ],
+   "id": "bbaa8f1fdd0ceb32",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5953899208567375\n",
       "3.595389920856737\n",
-      "3.5953899208053888\n",
+      "3.595389920798493\n",
       "3.595389920856736\n",
       "3.5953899208567384\n"
      ]
     }
    ],
-   "execution_count": 115
+   "execution_count": 156
   },
   {
    "metadata": {},
