--- a/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
+++ b/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
@@ -460,7 +460,7 @@
     "        raise ValueError(\"Macierz musi być kwadratowa\")\n",
     "\n",
     "    eigenvalues, _ = np.linalg.eig(A)\n",
-    "    unique_eigenvalues = np.unique(np.round(eigenvalues, decimals=10))  # zaokrąglamy, aby grupować\n",
+    "    unique_eigenvalues = np.unique(np.round(eigenvalues, decimals=10)) \n",
     "\n",
     "    total_geometric_multiplicity = 0\n",
     "\n",
