--- a/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
+++ b/AnalizaWspółczynnikaUwarunkowaniaMacierzy.ipynb
@@ -446,10 +446,13 @@
    "id": "888cd3b6b4c93279"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T22:06:30.947604Z",
+     "start_time": "2025-05-31T22:06:30.943176Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from numpy.linalg import matrix_rank\n",
     "\n",
@@ -476,7 +479,9 @@
     "\n",
     "    return total_geometric_multiplicity == n"
    ],
-   "id": "a08600900bc88f71"
+   "id": "a08600900bc88f71",
+   "outputs": [],
+   "execution_count": 166
   },
   {
    "metadata": {
